--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <script src="gifjsLib/gif.js"></script>
     </head>
 <body id="body" style="color:black; overflow: hidden; ">
-    <h3 id="header">Open Graphing Calculator</h3>
+    <h3 id="header">Simple 2d projection of 3d surface as heatmaps</h3>
     <div style="display: inline-block;">
 
                     <canvas id="screen" width="100%" height="90%"
